BaSP-W01-2022: add images and 'Why should use me section' in main

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -14,19 +14,19 @@
         </h4>
         <div class="social-media-icons">
             <a href="#">
-                <img src="../Semana-01/assets" alt="facebook-icon">
+                <img src="Assets/facebook-logo.png" alt="facebook-icon">
             </a>
             <a href="#">
-                <img src="../Semana-01/assets" alt="linkedin-icon">
+                <img src="Assets/linkedin-logo.png" alt="linkedin-icon">
             </a>
             <a href="#">
-                <img src="../Semana-01/assets" alt="twitter-icon">
+                <img src="Assets/twitter-logo.png" alt="twitter-icon">
             </a>
             <a href="#">
-                <img src="../Semana-01/assets" alt="github-icon">
+                <img src="Assets/github-logo.png" alt="github-icon">
             </a>
             <a href="#">
-                <img src="../Semana-01/assets" alt="instagram-icon">
+                <img src="Assets/instragram-logo.png" alt="instagram-icon">
             </a>
         </div>
     </header>
@@ -42,8 +42,53 @@
                 Trackgenix is a web system which facilitates the registration of hours worked by each employee in each
                 project and work team.
             </p>
-            <img src="../Semana-01/assets" alt="a person using a computer">
+            <img src="Assets/computer.png" alt="a person using a computer">
             <button>Learn more</button>
+        </section>
+        <section>
+            <h2>
+                Why you sould use me
+            </h2>
+            <article>
+                <img src="Assets/cube.png" alt="cube">
+                <h3>
+                    Reason 1
+                </h3>
+                <p>
+                    Explanation here of the correspondent reason. We left this with a random text for the moment. This
+                    is just an example. Don't take this text seriously
+                </p>
+            </article>
+            <article>
+                <img src="Assets/stack.png" alt="a stack">
+                <h3>
+                    Reason 2
+                </h3>
+                <p>
+                    Explanation here of the correspondent reason. We left this with a random text for the moment. This
+                    is just an example. Don't take this text seriously
+                </p>
+            </article>
+            <article>
+                <img src="Assets/rocket.png" alt="rocket">
+                <h3>
+                    Reason 3
+                </h3>
+                <p>
+                    Explanation here of the correspondent reason. We left this with a random text for the moment. This
+                    is just an example. Don't take this text seriously
+                </p>
+            </article>
+            <article>
+                <img src="Assets/people.png" alt="people with a lider">
+                <h3>
+                    Reason 4
+                </h3>
+                <p>
+                    Explanation here of the correspondent reason. We left this with a random text for the moment. This
+                    is just an example. Don't take this text seriously
+                </p>
+            </article>
         </section>
     </main>
 </body>
