BaSP-W01-2022: Features section complete

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -31,7 +31,7 @@
         </div>
     </header>
     <main>
-        <section>
+        <div id="title">
             <h1>
                 Hi, I’m Trackgenix by GigaTech Software Solutions SA
             </h1>
@@ -44,12 +44,12 @@
             </p>
             <button>Learn more</button>
             <img src="Assets/computer.png" alt="a person using a computer">
-        </section>
-        <section>
+        </div>
+        <div id="reasons">
             <h2>
                 Why you sould use me
             </h2>
-            <article>
+            <article id="reason1">
                 <img src="Assets/cube.png" alt="cube">
                 <h3>
                     Reason 1
@@ -59,7 +59,7 @@
                     is just an example. Don't take this text seriously
                 </p>
             </article>
-            <article>
+            <article id="reason2">
                 <img src="Assets/stack.png" alt="a stack">
                 <h3>
                     Reason 2
@@ -69,7 +69,7 @@
                     is just an example. Don't take this text seriously
                 </p>
             </article>
-            <article>
+            <article id="reason3">
                 <img src="Assets/rocket.png" alt="rocket">
                 <h3>
                     Reason 3
@@ -79,7 +79,7 @@
                     is just an example. Don't take this text seriously
                 </p>
             </article>
-            <article>
+            <article id="reason4">
                 <img src="Assets/people.png" alt="people with a lider">
                 <h3>
                     Reason 4
@@ -89,7 +89,64 @@
                     is just an example. Don't take this text seriously
                 </p>
             </article>
-        </section>
+        </div>
+        <div id="features">
+            <h2>
+                Features
+            </h2>
+            <article id="feature1">
+                <img src="Assets/clock.png" alt="clock">
+                <h3>
+                    Hours Log
+                </h3>
+                <p>
+                    Explanation here of the correspondent feature. We left this with a random text for the moment. This
+                    is just an example. Don't take this text seriously
+                </p>
+                <button>
+                    MORE
+                </button>
+            </article>
+            <article id="feature2">
+                <img src="Assets/books.png" alt="books">
+                <h3>
+                    Reports
+                </h3>
+                <p>
+                    Explanation here of the correspondent feature. We left this with a random text for the moment. This
+                    is just an example. Don't take this text seriously
+                </p>
+                <button>
+                    MORE
+                </button>
+            </article>
+            <article id="feature3">
+                <img src="Assets/board.png" alt="board">
+                <h3>
+                    Resource Management
+                </h3>
+                <p>
+                    Explanation here of the correspondent feature. We left this with a random text for the moment. This
+                    is just an example. Don't take this text seriously
+                </p>
+                <button>
+                    MORE
+                </button>
+            </article>
+            <article id="feature4">
+                <img src="Assets/meeting.png" alt="people in a meeting">
+                <h3>
+                    Multiple Roles
+                </h3>
+                <p>
+                    Explanation here of the correspondent feature. We left this with a random text for the moment. This
+                    is just an example. Don't take this text seriously
+                </p>
+                <button>
+                    MORE
+                </button>
+            </article>
+        </div>
     </main>
 </body>
 
