--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -31,7 +31,7 @@
         </div>
     </header>
     <main>
-        <div id="title">
+        <section id="title">
             <h1>
                 Hi, I’m Trackgenix by GigaTech Software Solutions SA
             </h1>
@@ -44,8 +44,8 @@
             </p>
             <button>Learn more</button>
             <img src="Assets/computer.png" alt="a person using a computer">
-        </div>
-        <div id="reasons">
+        </section>
+        <section id="reasons">
             <h2>
                 Why you sould use me
             </h2>
@@ -89,8 +89,8 @@
                     is just an example. Don't take this text seriously
                 </p>
             </article>
-        </div>
-        <div id="features">
+        </section>
+        <section id="features">
             <h2>
                 Features
             </h2>
@@ -146,7 +146,45 @@
                     MORE
                 </button>
             </article>
-        </div>
+        </section>
+        <section id="contact-form">
+            <h2>
+                Get some info
+            </h2>
+            <form>
+                <label for="name">
+                    Full name:
+                </label>
+                <input type="text" name="name" id="name" placeholder="Full name" required>
+                <label for="email">
+                    Email:
+                </label>
+                <input type="email" name="email" id="email" required>
+                <div id="contact-area">
+                    <p>
+                        Contact area:
+                    </p>
+                    <input type="radio" id="human-resources" name="contact-area" value="human-resources">
+                    <label for="human-resources">
+                        Human Resources
+                    </label>
+                    <input type="radio" id="systems" name="contact-area" value="systems">
+                    <label for="systems">
+                        Systems
+                    </label>
+                    <input type="radio" id="marketing" name="contact-area" value="marketing">
+                    <label for="human-resources">
+                        Marketing
+                    </label>
+                </div>
+                <label for="message">
+                    Message:
+                </label>
+                <input type="text" name="message" id="message" placeholder="Message" required>
+                <input type="reset" value="Reset">
+                <input type="submit" value="Send">
+            </form>
+        </section>
     </main>
 </body>
 
