BaSP-W01-2022: bug fix in contact form

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -173,7 +173,7 @@
                         Systems
                     </label>
                     <input type="radio" id="marketing" name="contact-area" value="marketing">
-                    <label for="human-resources">
+                    <label for="marketing">
                         Marketing
                     </label>
                 </div>
