BaSP-W01-2022: using icons instead img for social media links

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -5,6 +5,7 @@
     <meta name="description" content="A job hours tracker">
     <meta name="keywords" content="tracker, trackgenix, gigatech, software, software solutions, enterprise solutions,">
     <title>Trackgenix - Hours Tracker</title>
+    <link rel="stylesheet" href="Assets/font-awesome/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -12,21 +13,21 @@
         <h4>
             Trackgenix by GigaTech Software Solutions SA
         </h4>
-        <div class="social-media-icons">
+        <div id="header-icons" class="social-media-icons">
             <a href="#">
-                <img src="Assets/facebook-logo.png" alt="facebook-icon">
+                <i class="fa fa-facebook-square"></i>
             </a>
             <a href="#">
-                <img src="Assets/linkedin-logo.png" alt="linkedin-icon">
+                <i class="fa fa-linkedin-square"></i>
             </a>
             <a href="#">
-                <img src="Assets/twitter-logo.png" alt="twitter-icon">
+                <i class="fa fa-twitter"></i>
             </a>
             <a href="#">
-                <img src="Assets/github-logo.png" alt="github-icon">
+                <i class="fa fa-github"></i>
             </a>
             <a href="#">
-                <img src="Assets/instragram-logo.png" alt="instagram-icon">
+                <i class="fa fa-instagram"></i>
             </a>
         </div>
     </header>
