BaSP-W01-2022: add aside

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -29,6 +29,48 @@
                 </a>
             </div>
         </header>
+        <aside>
+            <div id="aside-menu">
+                <h2>
+                    Menu
+                </h2>
+                <nav>
+                    <a href="#">Home</a>
+                    <a href="#">Sign Up</a>
+                    <a href="#">Log In</a>
+                </nav>
+            </div>      
+            <div id="aside-contact">
+                <h2>
+                    Get In Touch
+                </h2>
+                <p>
+                    Explanation here of the correspondent component. We left this with a random text for the moment. 
+                    This is just an example. Don't take this text seriously. Explanation here of the correspondent 
+                    component. We left this with a random text for the moment. This is just an example. Don't take 
+                    this text seriously.
+                </p>
+                <div id="aside-contact-info">
+                    <p>
+                        <i class="fa fa-envelope"></i>
+                        infotrackgenix@something.idk
+                    </p>
+                    <address>
+                        <p>
+                            <i class="fa fa-home"></i>
+                            1234 Somewhere Road #8254
+                        </p>
+                        <p>
+                            Nashville, TN 00000-0000
+                        </p>
+                    </address>
+                    <p>
+                        <i class="fa fa-phone"></i>
+                        (000) 000-0000
+                    </p>
+                </div>
+            </div>      
+        </aside>
         <main>
             <section id="title">
                 <h1>
@@ -38,8 +80,8 @@
                     A practical and easy to use system
                 </h2>
                 <p>
-                    Trackgenix is a web system which facilitates the registration of hours worked by each employee in each
-                    project and work team.
+                    Trackgenix is a web system which facilitates the registration of hours worked by each employee in 
+                    each project and work team.
                 </p>
                 <button>Learn more</button>
                 <img src="Assets/computer.png" alt="a person using a computer">
@@ -54,8 +96,8 @@
                         Reason 1
                     </h3>
                     <p>
-                        Explanation here of the correspondent reason. We left this with a random text for the moment. This
-                        is just an example. Don't take this text seriously
+                        Explanation here of the correspondent reason. We left this with a random text for the moment. 
+                        This is just an example. Don't take this text seriously
                     </p>
                 </article>
                 <article id="reason2">
