BaSP-W01-2022: using textarea instead input in contac form

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -221,7 +221,7 @@
                     <label for="message">
                         Message:
                     </label>
-                    <input type="text" name="message" id="message" placeholder="Message" required>
+                    <textarea name="message" id="message" cols="100" rows="10" placeholder="Message"></textarea>
                     <input type="reset" value="Reset">
                     <input type="submit" value="Send">
                 </form>
