BaSP-W01-2022: added links to footer lists

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -268,16 +268,16 @@
                 </h3>
                 <ol>
                     <li>
-                        Features
+                        <a href="#">Features</a> 
                     </li>
                     <li>
-                        Dowloads
+                        <a href="#">Dowloads</a>
                     </li>
                     <li>
-                        Integrations
+                        <a href="#">Integrations</a>
                     </li>
                     <li>
-                        Add-ons
+                        <a href="#">Add-ons</a>
                     </li>
                 </ol>
             </div>
@@ -287,16 +287,16 @@
                 </h3>
                 <ol>
                     <li>
-                        About Us
+                        <a href="#">About Us</a>
                     </li>
                     <li>
-                        Clients
+                        <a href="#">Clients</a>
                     </li>
                     <li>
-                        Resources
+                        <a href="#">Resources</a>
                     </li>
                     <li>
-                        Blog
+                        <a href="#">Blog</a>
                     </li>
                 </ol>
             </div>
@@ -306,16 +306,16 @@
                 </h3>
                 <ol>
                     <li>
-                        Help
+                        <a href="#">Help</a>
                     </li>
                     <li>
-                        Tutorial
+                        <a href="#">Tutorial</a>
                     </li>
                     <li>
-                        API
+                        <a href="#">API</a>
                     </li>
                     <li>
-                        Contact
+                        <a href="#">Contact</a>
                     </li>
                 </ol>
             </div>
