BaSP-W01-2022: added links to aside contact info (mailto and tel)

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -51,10 +51,10 @@
                     this text seriously.
                 </p>
                 <div id="aside-contact-info">
-                    <p>
+                    <a href="mailto:#">
                         <i class="fa fa-envelope"></i>
                         infotrackgenix@something.idk
-                    </p>
+                    </a>
                     <address>
                         <p>
                             <i class="fa fa-home"></i>
@@ -64,10 +64,10 @@
                             Nashville, TN 00000-0000
                         </p>
                     </address>
-                    <p>
+                    <a href="tel:+00">
                         <i class="fa fa-phone"></i>
                         (000) 000-0000
-                    </p>
+                    </a>
                 </div>
             </div>      
         </aside>
