BaSP-W01-2022: added ul tag to links in aside section

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -3,7 +3,9 @@
     <head>
         <meta name="description" content="A job hours tracker">
         <meta name="keywords" content="tracker, trackgenix, gigatech, software, software solutions, enterprise solutions,">
-        <title>Trackgenix - Hours Tracker</title>
+        <title>
+            Trackgenix - Hours Tracker
+        </title>
         <link rel="stylesheet" href="Assets/font-awesome/css/font-awesome.min.css">
     </head>
     <body>
@@ -35,9 +37,17 @@
                     Menu
                 </h2>
                 <nav>
-                    <a href="#">Home</a>
-                    <a href="#">Sign Up</a>
-                    <a href="#">Log In</a>
+                    <ul>
+                        <li>
+                            <a href="#">Home</a>
+                        </li>
+                        <li>
+                            <a href="#">Sign Up</a>
+                        </li>
+                        <li>
+                            <a href="#">Log In</a>
+                        </li>
+                    </ul>
                 </nav>
             </div>      
             <div id="aside-contact">
