--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -203,14 +203,18 @@
                     Get some info
                 </h2>
                 <form>
-                    <label for="name">
+                    <div>
+                        <label for="name">
                         Full name:
-                    </label>
-                    <input type="text" name="name" id="name" placeholder="Full name" required>
-                    <label for="email">
+                        </label>
+                        <input type="text" name="name" id="name" placeholder="Full name" required>
+                    </div>
+                    <div>
+                        <label for="email">
                         Email:
-                    </label>
-                    <input type="email" name="email" id="email" required>
+                        </label>
+                        <input type="email" name="email" id="email" required>
+                    </div>
                     <div id="contact-area">
                         <p>
                             Contact area:
@@ -228,10 +232,12 @@
                             Marketing
                         </label>
                     </div>
-                    <label for="message">
-                        Message:
-                    </label>
-                    <textarea name="message" id="message" cols="100" rows="10" placeholder="Message"></textarea>
+                    <div>
+                        <label for="message">
+                            Message:
+                        </label>
+                        <textarea name="message" id="message" cols="100" rows="10" placeholder="Message"></textarea>
+                    </div>
                     <input type="reset" value="Reset">
                     <input type="submit" value="Send">
                 </form>
