--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -13,7 +13,7 @@
             <h4>
                 Trackgenix by GigaTech Software Solutions SA
             </h4>
-            <div id="header-icons" class="social-media-icons">
+            <div id="header-icons">
                 <a href="#">
                     <i class="fa fa-facebook-square"></i>
                 </a>
@@ -82,7 +82,7 @@
             </div>      
         </aside>
         <main>
-            <section id="title">
+            <section id="main-title">
                 <h1>
                     Hi, I’m Trackgenix by GigaTech Software Solutions SA
                 </h1>
@@ -100,7 +100,7 @@
                 <h2>
                     Why you sould use me
                 </h2>
-                <article id="reason1">
+                <article>
                     <img src="Assets/cube.png" alt="cube">
                     <h3>
                         Reason 1
@@ -110,7 +110,7 @@
                         This is just an example. Don't take this text seriously
                     </p>
                 </article>
-                <article id="reason2">
+                <article>
                     <img src="Assets/stack.png" alt="a stack">
                     <h3>
                         Reason 2
@@ -120,7 +120,7 @@
                         is just an example. Don't take this text seriously
                     </p>
                 </article>
-                <article id="reason3">
+                <article>
                     <img src="Assets/rocket.png" alt="rocket">
                     <h3>
                         Reason 3
@@ -130,7 +130,7 @@
                         is just an example. Don't take this text seriously
                     </p>
                 </article>
-                <article id="reason4">
+                <article>
                     <img src="Assets/people.png" alt="people with a lider">
                     <h3>
                         Reason 4
@@ -145,7 +145,7 @@
                 <h2>
                     Features
                 </h2>
-                <article id="feature1">
+                <article>
                     <img src="Assets/clock.png" alt="clock">
                     <h3>
                         Hours Log
@@ -158,7 +158,7 @@
                         MORE
                     </button>
                 </article>
-                <article id="feature2">
+                <article>
                     <img src="Assets/books.png" alt="books">
                     <h3>
                         Reports
@@ -171,7 +171,7 @@
                         MORE
                     </button>
                 </article>
-                <article id="feature3">
+                <article>
                     <img src="Assets/board.png" alt="board">
                     <h3>
                         Resource Management
@@ -184,7 +184,7 @@
                         MORE
                     </button>
                 </article>
-                <article id="feature4">
+                <article>
                     <img src="Assets/meeting.png" alt="people in a meeting">
                     <h3>
                         Multiple Roles
@@ -242,11 +242,11 @@
                     <input type="submit" value="Send">
                 </form>
             </section>
-            <section>
+            <section id="our-history">
                 <h2>
                     History of the business
                 </h2>
-                <div id="foundation-history">
+                <div>
                     <h3>
                         The foundation
                     </h3>
@@ -257,7 +257,7 @@
                         pulvinar. Proin convallis arcu purus, a tristique purus euismod vel.
                     </p>
                 </div>
-                <div id="history-paragraph">
+                <div>
                     <h3>
                         Something else
                     </h3>
@@ -278,7 +278,7 @@
             </section>
         </main>
         <footer>
-            <div id="foorter-products">
+            <div>
                 <h3>
                     Our products:
                 </h3>
@@ -297,7 +297,7 @@
                     </li>
                 </ol>
             </div>
-            <div id="foorter-business">
+            <div>
                 <h3>
                     Business:
                 </h3>
@@ -316,7 +316,7 @@
                     </li>
                 </ol>
             </div>
-            <div id="foorter-support">
+            <div>
                 <h3>
                     Support:
                 </h3>
@@ -335,7 +335,7 @@
                     </li>
                 </ol>
             </div>
-            <div id="footer-icons" class="social-media-icons">
+            <div id="footer-icons">
                 <a href="#">
                     <i class="fa fa-facebook-square"></i>
                 </a>
