BaSP-W02-2022: add link to stylesheets, changes from last week applied

--- a/Semana-02/index.html
+++ b/Semana-02/index.html
@@ -2,18 +2,23 @@
 <html>
     <head>
         <meta name="description" content="A job hours tracker">
-        <meta name="keywords" content="tracker, trackgenix, gigatech, software, software solutions, enterprise solutions,">
+        <meta name="keywords" content="tracker, trackgenix, gigatech, software, software solutions, enterprise solutions">
+        <link rel="stylesheet" type="text/css" href="css/reset.css">
+        <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
         <title>
             Trackgenix - Hours Tracker
         </title>
-        <link rel="stylesheet" href="Assets/font-awesome/css/font-awesome.min.css">
     </head>
     <body>
         <header>
-            <h4>
-                Trackgenix by GigaTech Software Solutions SA
-            </h4>
-            <div id="header-icons">
+            <div>
+                <span class="text-bold">
+                    Trackgenix
+                </span> 
+                by GigaTech Software Solutions SA
+            </div>
+            <span id="header-icons" class="social-media-icons">
                 <a href="https://facebook.com/">
                     <i class="fa fa-facebook-square"></i>
                 </a>
@@ -29,7 +34,7 @@
                 <a href="https://instagram.com/">
                     <i class="fa fa-instagram"></i>
                 </a>
-            </div>
+            </span>
         </header>
         <aside>
             <div id="aside-menu">
@@ -49,15 +54,15 @@
                         </li>
                     </ul>
                 </nav>
-            </div>      
+            </div>
             <div id="aside-contact">
                 <h2>
                     Get In Touch
                 </h2>
                 <p>
-                    Explanation here of the correspondent component. We left this with a random text for the moment. 
-                    This is just an example. Don't take this text seriously. Explanation here of the correspondent 
-                    component. We left this with a random text for the moment. This is just an example. Don't take 
+                    Explanation here of the correspondent component. We left this with a random text for the moment.
+                    This is just an example. Don't take this text seriously. Explanation here of the correspondent
+                    component. We left this with a random text for the moment. This is just an example. Don't take
                     this text seriously.
                 </p>
                 <div id="aside-contact-info">
@@ -65,15 +70,15 @@
                         <i class="fa fa-envelope"></i>
                         infotrackgenix@something.idk
                     </a>
-                    <address>
+                    <div>
+                        <i class="fa fa-home"></i>
                         <p>
-                            <i class="fa fa-home"></i>
                             1234 Somewhere Road #8254
                         </p>
                         <p>
                             Nashville, TN 00000-0000
                         </p>
-                    </address>
+                    </div>
                     <a href="tel:+00">
                         <i class="fa fa-phone"></i>
                         (000) 000-0000
@@ -94,16 +99,16 @@
                     each project and work team.
                 </p>
                 <button>Learn more</button>
-                <img src="Assets/computer.png" alt="a person using a computer">
+                <img src="assets/computer.png" alt="a person using a computer">
             </section>
             <section id="reasons">
                 <h2>
                     Why you sould use me
                 </h2>
                 <article>
-                    <img src="Assets/cube.png" alt="cube">
+                    <img src="assets/cube.png" alt="cube">
                     <h3>
-                        Reason 1
+                        Productivity booster
                     </h3>
                     <p>
                         Explanation here of the correspondent reason. We left this with a random text for the moment. 
@@ -111,9 +116,9 @@
                     </p>
                 </article>
                 <article>
-                    <img src="Assets/stack.png" alt="a stack">
+                    <img src="assets/stack.png" alt="a stack">
                     <h3>
-                        Reason 2
+                        Work traceability
                     </h3>
                     <p>
                         Explanation here of the correspondent reason. We left this with a random text for the moment. This
@@ -121,9 +126,9 @@
                     </p>
                 </article>
                 <article>
-                    <img src="Assets/rocket.png" alt="rocket">
+                    <img src="assets/rocket.png" alt="rocket">
                     <h3>
-                        Reason 3
+                        Leadership and team management
                     </h3>
                     <p>
                         Explanation here of the correspondent reason. We left this with a random text for the moment. This
@@ -131,9 +136,9 @@
                     </p>
                 </article>
                 <article>
-                    <img src="Assets/people.png" alt="people with a lider">
+                    <img src="assets/people.png" alt="people with a lider">
                     <h3>
-                        Reason 4
+                        Decision making
                     </h3>
                     <p>
                         Explanation here of the correspondent reason. We left this with a random text for the moment. This
@@ -146,7 +151,7 @@
                     Features
                 </h2>
                 <article>
-                    <img src="Assets/clock.png" alt="clock">
+                    <img src="assets/clock.png" alt="clock">
                     <h3>
                         Hours Log
                     </h3>
@@ -159,7 +164,7 @@
                     </button>
                 </article>
                 <article>
-                    <img src="Assets/books.png" alt="books">
+                    <img src="assets/books.png" alt="books">
                     <h3>
                         Reports
                     </h3>
@@ -172,7 +177,7 @@
                     </button>
                 </article>
                 <article>
-                    <img src="Assets/board.png" alt="board">
+                    <img src="assets/board.png" alt="board">
                     <h3>
                         Resource Management
                     </h3>
@@ -185,7 +190,7 @@
                     </button>
                 </article>
                 <article>
-                    <img src="Assets/meeting.png" alt="people in a meeting">
+                    <img src="assets/meeting.png" alt="people in a meeting">
                     <h3>
                         Multiple Roles
                     </h3>
@@ -261,7 +266,7 @@
                     <h3>
                         Something else
                     </h3>
-                    <img src="Assets/tablet.png" alt="people reading a tablet">
+                    <img src="assets/tablet.png" alt="people reading a tablet">
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempus lorem nibh. Donec faucibus
                         tortor a lacus dignissim ullamcorper. Vestibulum pellentesque non neque eu facilisis. Aliquam
@@ -273,7 +278,7 @@
                         Pellentesque blandit diam in mauris luctus, ut ornare sem pellentesque. Vestibulum in mollis enim.
                         Morbi est ex, placerat et convallis non, posuere vitae lectus.
                     </p>
-                    <img src="Assets/light-bulb.png" alt="hands holding a light bulb">
+                    <img src="assets/light-bulb.png" alt="hands holding a light bulb">
                 </div>
             </section>
         </main>
@@ -335,7 +340,7 @@
                     </li>
                 </ol>
             </div>
-            <div id="footer-icons">
+            <div id="footer-icons" class="social-media-icons">
                 <a href="https://facebook.com/">
                     <i class="fa fa-facebook-square"></i>
                 </a>
