BaSP-W02-2022: adding main title style

--- a/Semana-02/index.html
+++ b/Semana-02/index.html
@@ -94,14 +94,14 @@
                             <span>Hi, I’m Trackgenix </span> 
                             by GigaTech Software Solutions SA
                         </h1>
-                        <h2>
+                        <p class="subheader">
                             A practical and easy to use system
-                        </h2>
+                        </p>
                         <p>
                             Trackgenix is a web system which facilitates the registration of hours worked by each employee in
                             each project and work team.
                         </p>
-                        <button>Learn more</button>
+                        <button class="button">Learn more</button>
                     </div>
                     <img src="assets/computer.png" alt="a person using a computer">
                 </section>
