--- a/Semana-02/index.html
+++ b/Semana-02/index.html
@@ -41,23 +41,29 @@
                     this text seriously.
                 </p>
                 <div id="aside-contact-info">
-                    <a href="mailto:#">
-                        <i class="fa fa-envelope"></i>
-                        infotrackgenix@something.idk
-                    </a>
+                    <div>
+                        <a href="mailto:#">
+                            <i class="fa fa-envelope"></i>
+                            infotrackgenix@something.idk
+                        </a>
+                    </div>
                     <div>
                         <i class="fa fa-home"></i>
-                        <p>
-                            1234 Somewhere Road #8254
-                        </p>
-                        <p>
-                            Nashville, TN 00000-0000
-                        </p>
+                        <div>
+                            <p>
+                                1234 Somewhere Road #8254
+                            </p>
+                            <p>
+                                Nashville, TN 00000-0000
+                            </p>
+                        </div>
                     </div>
-                    <a href="tel:+00">
-                        <i class="fa fa-phone"></i>
-                        (000) 000-0000
-                    </a>
+                    <div>
+                        <a href="tel:+00">
+                            <i class="fa fa-phone"></i>
+                            (000) 000-0000
+                        </a>
+                    </div>
                 </div>
             </div>
         </aside>
