BaSP-W02-2022: styling 'Why you should use me' section

--- a/Semana-02/index.html
+++ b/Semana-02/index.html
@@ -117,43 +117,51 @@
                     </h2>
                     <article>
                         <img src="assets/cube.png" alt="cube">
-                        <h3>
-                            Productivity booster
-                        </h3>
-                        <p>
-                            Explanation here of the correspondent reason. We left this with a random text for the moment.
-                            This is just an example. Don't take this text seriously
-                        </p>
+                        <div>
+                            <h3>
+                                Productivity booster
+                            </h3>
+                            <p>
+                                Explanation here of the correspondent reason. We left this with a random text for the moment.
+                                This is just an example. Don't take this text seriously
+                            </p>
+                        </div>
                     </article>
                     <article>
                         <img src="assets/stack.png" alt="a stack">
-                        <h3>
-                            Work traceability
-                        </h3>
-                        <p>
-                            Explanation here of the correspondent reason. We left this with a random text for the moment. This
-                            is just an example. Don't take this text seriously
-                        </p>
+                        <div>
+                            <h3>
+                                Work traceability
+                            </h3>
+                            <p>
+                                Explanation here of the correspondent reason. We left this with a random text for the moment. This
+                                is just an example. Don't take this text seriously
+                            </p>
+                        </div>
                     </article>
                     <article>
                         <img src="assets/rocket.png" alt="rocket">
-                        <h3>
-                            Leadership and team management
-                        </h3>
-                        <p>
-                            Explanation here of the correspondent reason. We left this with a random text for the moment. This
-                            is just an example. Don't take this text seriously
-                        </p>
+                        <div>
+                            <h3>
+                                Leadership and team management
+                            </h3>
+                            <p>
+                                Explanation here of the correspondent reason. We left this with a random text for the moment. This
+                                is just an example. Don't take this text seriously
+                            </p>
+                        </div>
                     </article>
                     <article>
                         <img src="assets/people.png" alt="people with a lider">
-                        <h3>
-                            Decision making
-                        </h3>
-                        <p>
-                            Explanation here of the correspondent reason. We left this with a random text for the moment. This
-                            is just an example. Don't take this text seriously
-                        </p>
+                        <div>
+                            <h3>
+                                Decision making
+                            </h3>
+                            <p>
+                                Explanation here of the correspondent reason. We left this with a random text for the moment. This
+                                is just an example. Don't take this text seriously
+                            </p>
+                        </div>
                     </article>
                 </section>
                 <section id="features">
