BaSP-W02-2022: styling 'Features' section

--- a/Semana-02/index.html
+++ b/Semana-02/index.html
@@ -177,7 +177,7 @@
                             Explanation here of the correspondent feature. We left this with a random text for the moment. This
                             is just an example. Don't take this text seriously
                         </p>
-                        <button>
+                        <button class="button">
                             MORE
                         </button>
                     </article>
@@ -190,7 +190,7 @@
                             Explanation here of the correspondent feature. We left this with a random text for the moment. This
                             is just an example. Don't take this text seriously
                         </p>
-                        <button>
+                        <button class="button">
                             MORE
                         </button>
                     </article>
@@ -203,7 +203,7 @@
                             Explanation here of the correspondent feature. We left this with a random text for the moment. This
                             is just an example. Don't take this text seriously
                         </p>
-                        <button>
+                        <button class="button">
                             MORE
                         </button>
                     </article>
@@ -216,7 +216,7 @@
                             Explanation here of the correspondent feature. We left this with a random text for the moment. This
                             is just an example. Don't take this text seriously
                         </p>
-                        <button>
+                        <button class="button">
                             MORE
                         </button>
                     </article>
