--- a/Semana-02/index.html
+++ b/Semana-02/index.html
@@ -226,34 +226,42 @@
                         Get some info
                     </h2>
                     <form>
-                        <div>
-                            <label for="name">
-                            Full name:
-                            </label>
-                            <input type="text" name="name" id="name" placeholder="Full name" required>
-                        </div>
-                        <div>
-                            <label for="email">
-                            Email:
-                            </label>
-                            <input type="email" name="email" id="email" required>
+                        <div id="form-name-email">
+                            <div>
+                                <label for="name">
+                                    Full name:
+                                </label>
+                                <input type="text" name="name" id="name" placeholder="Full name" required>
+                            </div>
+                            <div>
+                                <label for="email">
+                                    Email:
+                                </label>
+                                <input type="email" name="email" id="email" placeholder="Email" required>
+                            </div>
                         </div>
                         <div id="contact-area">
                             <p>
                                 Contact area:
                             </p>
-                            <input type="radio" id="human-resources" name="contact-area" value="human-resources">
-                            <label for="human-resources">
-                                Human Resources
-                            </label>
-                            <input type="radio" id="systems" name="contact-area" value="systems">
-                            <label for="systems">
-                                Systems
-                            </label>
-                            <input type="radio" id="marketing" name="contact-area" value="marketing">
-                            <label for="marketing">
-                                Marketing
-                            </label>
+                            <div class="input-radio">
+                                <input type="radio" id="human-resources" name="contact-area" value="human-resources">
+                                <label for="human-resources">
+                                    Human Resources
+                                </label>
+                            </div>
+                            <div class="input-radio">
+                                <input type="radio" id="systems" name="contact-area" value="systems">
+                                <label for="systems">
+                                    Systems
+                                </label>
+                            </div>
+                            <div class="input-radio">
+                                <input type="radio" id="marketing" name="contact-area" value="marketing">
+                                <label for="marketing">
+                                    Marketing
+                                </label>
+                            </div>
                         </div>
                         <div>
                             <label for="message">
@@ -261,8 +269,8 @@
                             </label>
                             <textarea name="message" id="message" cols="100" rows="10" placeholder="Message"></textarea>
                         </div>
-                        <input type="reset" value="Reset">
-                        <input type="submit" value="Send">
+                        <input type="reset" value="Reset" class="button-form">
+                        <input type="submit" value="Send" class="button-form btn-send">
                     </form>
                 </section>
                 <section id="our-history">
