--- a/Semana-02/index.html
+++ b/Semana-02/index.html
@@ -292,19 +292,23 @@
                         <h3>
                             Something else
                         </h3>
-                        <img src="assets/tablet.png" alt="people reading a tablet">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempus lorem nibh. Donec faucibus
-                            tortor a lacus dignissim ullamcorper. Vestibulum pellentesque non neque eu facilisis. Aliquam
-                            viverra efficitur egestas. Mauris consequat nec turpis vel vestibulum. Morbi bibendum ac dui ut
-                            pulvinar. Proin convallis arcu purus, a tristique purus euismod vel. Nunc auctor massa arcu, vel
-                            commodo libero sagittis et. Fusce turpis mauris, mattis eget sem a, ullamcorper mattis mi. Class
-                            aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vivamus ut
-                            rhoncus tortor, non mattis augue. Fusce lorem magna, lacinia sed eros at, tincidunt tristique nulla.
-                            Pellentesque blandit diam in mauris luctus, ut ornare sem pellentesque. Vestibulum in mollis enim.
-                            Morbi est ex, placerat et convallis non, posuere vitae lectus.
-                        </p>
-                        <img src="assets/light-bulb.png" alt="hands holding a light bulb">
+                        <div>
+                            <img src="assets/tablet.png" alt="people reading a tablet">
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempus lorem nibh. Donec faucibus
+                                tortor a lacus dignissim ullamcorper. Vestibulum pellentesque non neque eu facilisis. Aliquam
+                                viverra efficitur egestas. Mauris consequat nec turpis vel vestibulum. Morbi bibendum ac dui ut
+                                pulvinar. Proin convallis arcu purus, a tristique purus euismod vel. Nunc auctor massa arcu, vel
+                                commodo libero sagittis et. 
+                            </p>
+                            <img src="assets/light-bulb.png" alt="hands holding a light bulb">
+                            <p> Fusce turpis mauris, mattis eget sem a, ullamcorper mattis mi. Class
+                                aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vivamus ut
+                                rhoncus tortor, non mattis augue. Fusce lorem magna, lacinia sed eros at, tincidunt tristique nulla.
+                                Pellentesque blandit diam in mauris luctus, ut ornare sem pellentesque. Vestibulum in mollis enim.
+                                Morbi est ex, placerat et convallis non, posuere vitae lectus.
+                            </p>
+                        </div>
                     </div>
                 </section>
             </main>
