--- a/Semana-02/index.html
+++ b/Semana-02/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <aside>
-            <div id="aside-menu">
+            <div>
                 <h2>
                     Menu
                 </h2>
@@ -112,7 +112,7 @@
                     <img src="assets/computer.png" alt="a person using a computer">
                 </section>
                 <section id="reasons">
-                    <h2>
+                    <h2 class="margin-right-x7">
                         Why you should use me
                     </h2>
                     <article>
@@ -165,7 +165,7 @@
                     </article>
                 </section>
                 <section id="features">
-                    <h2>
+                    <h2 class="margin-right-x7">
                         Features
                     </h2>
                     <article>
